--- a/css/minstyle.io.css
+++ b/css/minstyle.io.css
@@ -38,10 +38,7 @@ a { color: #1dabe7; }
 
 .ms-block-inline { display: block-inline; }
 
-/* 
-	Inspired by grafikart.fr
-	https://www.grafikart.fr/tutoriels/html-css/grille-responsive-css-498
-*/
+/*  Inspired by grafikart.fr https://www.grafikart.fr/tutoriels/html-css/grille-responsive-css-498 */
 .container { max-width: 1140px; margin: 0 auto; }
 
 .col-s-1, .col-m-1, .col-l-1, .col-s-2, .col-m-2, .col-l-2, .col-s-3, .col-m-3, .col-l-3, .col-s-4, .col-m-4, .col-l-4, .col-s-5, .col-m-5, .col-l-5, .col-s-6, .col-m-6, .col-l-6, .col-s-7, .col-m-7, .col-l-7, .col-s-8, .col-m-8, .col-l-8, .col-s-9, .col-m-9, .col-l-9, .col-s-10, .col-m-10, .col-l-10, .col-s-11, .col-m-11, .col-l-11, .col-s-12, .col-m-12, .col-l-12 { float: left; position: relative; min-height: 1px; padding: 0 1%; }
@@ -325,11 +322,57 @@ button.no-margin, .ms-btn.no-margin, input[type='button'].no-margin, input[type=
 
 .ms-badge-title.ms-blue { background-color: #1dabe7; }
 
+.ms-badge-title.ms-red { background-color: #e04540; }
+
 .ms-badge-title.ms-green { background-color: #5ca745; }
 
-.ms-badge-title.ms-red { background-color: #cb3030; }
+.ms-badge-title.ms-gradient { background-image: -owg-linear-gradient(to left top, #fd8157, #eb5a82); background-image: -webkit-linear-gradient(to left top, #fd8157, #eb5a82); background-image: -moz-linear-gradient(to left top, #fd8157, #eb5a82); background-image: -o-linear-gradient(to left top, #fd8157, #eb5a82); background-image: linear-gradient(to left top, #fd8157, #eb5a82); }
 
 .ms-badge-title.ms-white { background-color: #d9d9d9; color: #000; }
+
+.ms-badge-gh { background-color: #696B6C; display: inline-block; overflow: hidden; -webkit-border-radius: 0.3rem; -moz-border-radius: 0.3rem; -ms-border-radius: 0.3rem; -o-border-radius: 0.3rem; border-radius: 0.3rem; }
+
+.ms-badge-gh .ms-dark-side { float: left; color: #fff; font-size: 0.9rem; padding: 0.3rem 0.5rem; }
+
+.ms-badge-gh .ms-color-side { background-color: #adb5bd; float: left; color: #fff; font-size: 0.9rem; padding: 0.3rem 0.5rem; }
+
+.ms-badge-gh .ms-color-side.ms-blue { background-color: #1dabe7; }
+
+.ms-badge-gh .ms-color-side.ms-red { background-color: #e04540; }
+
+.ms-badge-gh .ms-color-side.ms-green { background-color: #5ca745; }
+
+.ms-badge-gh .ms-color-side.ms-gradient { background-image: -owg-linear-gradient(to left top, #fd8157, #eb5a82); background-image: -webkit-linear-gradient(to left top, #fd8157, #eb5a82); background-image: -moz-linear-gradient(to left top, #fd8157, #eb5a82); background-image: -o-linear-gradient(to left top, #fd8157, #eb5a82); background-image: linear-gradient(to left top, #fd8157, #eb5a82); }
+
+.ms-badge-gh .ms-color-side.ms-white { background-color: #d9d9d9; color: #000; }
+
+.ms-badge { background-color: #696B6C; color: #fff; display: inline-block; overflow: hidden; -webkit-border-radius: 0.3rem; -moz-border-radius: 0.3rem; -ms-border-radius: 0.3rem; -o-border-radius: 0.3rem; border-radius: 0.3rem; padding: 0.6rem 0.8rem; }
+
+.ms-badge.ms-blue { background-color: #1dabe7; }
+
+.ms-badge.ms-red { background-color: #e04540; }
+
+.ms-badge.ms-green { background-color: #5ca745; }
+
+.ms-badge.ms-gradient { background-image: -owg-linear-gradient(to left top, #fd8157, #eb5a82); background-image: -webkit-linear-gradient(to left top, #fd8157, #eb5a82); background-image: -moz-linear-gradient(to left top, #fd8157, #eb5a82); background-image: -o-linear-gradient(to left top, #fd8157, #eb5a82); background-image: linear-gradient(to left top, #fd8157, #eb5a82); }
+
+.ms-badge.ms-white { background-color: #d9d9d9; color: #000; }
+
+.ms-badge.ms-rounded { border-radius: 10rem; }
+
+.ms-badge.ms-border.ms-blue { border: 1px solid #1dabe7; background: transparent; color: #1dabe7; }
+
+.ms-badge.ms-border.ms-green { border: 1px solid #5ca745; background: transparent; color: #5ca745; }
+
+.ms-badge.ms-border.ms-red { border: 1px solid #cb3030; background: transparent; color: #cb3030; }
+
+.ms-badge.ms-border.ms-white { border: 1px solid #d9d9d9; background: transparent; color: #d9d9d9; color: #000; }
+
+.ms-badge.ms-small { padding: 0.3rem 0.5rem; font-size: 0.8rem; }
+
+.ms-badge.ms-large { padding: 0.9rem 1.1rem; font-size: 1.2rem; }
+
+a.ms-badge { text-decoration: none; }
 
 blockquote, .ms-blockquote { -webkit-border-radius: 0.3rem; -moz-border-radius: 0.3rem; -ms-border-radius: 0.3rem; -o-border-radius: 0.3rem; border-radius: 0.3rem; border-left: 5px solid #f2f2f2; background-color: white; color: #666666; background-color: #f2f2f2; border-left: 5px solid #adb5bd; text-align: justify; font-style: italic; line-height: 1.3em; padding: 1.25rem; margin: 0.5rem; }
 
