Changes on Badge en Box
- Change padding on GH badge
- Change header padding on Boxe

--- a/css/scss/_box.scss
+++ b/css/scss/_box.scss
@@ -9,7 +9,7 @@
 	.ms-header{
 		background-color: $color-gray;
 		border-bottom: 1px solid $color-gray-medium;
-		padding: 1rem;
+		padding: 0.5rem 1rem;
 	}
 
 	.ms-content{
