--- a/css/scss/_grid.scss
+++ b/css/scss/_grid.scss
@@ -40,6 +40,10 @@ $large-width-grid: 1140px!default;
 .row{
     margin: 0.5rem 0;
     @include clearfix;
+
+    &.no-margin{
+        margin: 0;
+    }
 }
 
 @for $i from 1 through $columns{
