--- a/css/scss/_color.scss
+++ b/css/scss/_color.scss
@@ -7,6 +7,7 @@ $color_success: #5ca745;
 $color-blue: #1dabe7;
 $color_red: #e04540;
 $color_green: #5ca745;
+$color-yellow: #ffc748;
 $color-gray: #f2f2f2;
 $color-gray-dark: #adb5bd;
 $color-gray-medium: darken($color-gray, 10%);
