--- a/css/scss/_content.scss
+++ b/css/scss/_content.scss
@@ -26,6 +26,12 @@
 .ms-text-gray-font{
 	color: $color-gray-font;
 }
+.ms-text-yellow{
+	color: $color-yellow;
+}
+.ms-text-white{
+	color: #fff;
+}
 
 .ms-text-center{
 	text-align:center;
