--- a/examples/css/style.css
+++ b/examples/css/style.css
@@ -7,8 +7,8 @@ header,
 	width: 100%;
 	height: 70px;
 	margin-bottom: 20px;
-	background: rgba(235,90,131,1);
-	background: linear-gradient(323deg, #fd8157, #eb5a82);
+	background: rgba(33,147,176,1);
+	background: linear-gradient(323deg, #2193b0, #6dd5ed);
 	background-size: 400% 400%;
 
 	-webkit-animation: AnimationName 4s ease infinite;
