--- a/css/scss/_color.scss
+++ b/css/scss/_color.scss
@@ -5,6 +5,7 @@ $color_success: #5ca745;
 
 /* New color name */
 $color-blue: #1dabe7;
+$color-blue-dark: #263238;
 $color_red: #e04540;
 $color_green: #5ca745;
 $color-yellow: #ffc748;
