--- a/css/scss/_utility.scss
+++ b/css/scss/_utility.scss
@@ -21,3 +21,7 @@
 .ms-block-inline{
 	display: block-inline;
 }
+
+.ms-shadow{
+	@include single-box-shadow($blur: 15px, $color: rgba(black, 0.3));
+}
