--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -18,5 +18,5 @@ $default-border-radius: .3rem;
 @import "_progressbar.scss";
 @import "_card.scss";
 @import "_menu.scss";
-@import "_content.scss";
+@import "_typographie.scss";
 @import "_box.scss";
