--- a/css/scss/_table.scss
+++ b/css/scss/_table.scss
@@ -46,6 +46,10 @@ tr{
 		@include tableBgColor($color-green);
 	}
 
+	&.ms-yellow{
+		@include tableBgColor($color-yellow);
+	}
+
 	td,
 	th{
 		border-bottom: .1rem solid darken($color-gray, 10%);
