--- a/css/minstyle.io.css
+++ b/css/minstyle.io.css
@@ -1458,13 +1458,15 @@ tr th {
     .ms-progress .ms-progress-fill.ms-green {
       background-color: #5ca745; }
     .ms-progress .ms-progress-fill.ms-red {
-      background-color: #cb3030; }
+      background-color: #e04540; }
+    .ms-progress .ms-progress-fill.ms-yellow {
+      background-color: #ffc748; }
     .ms-progress .ms-progress-fill.ms-gradient {
-      background-image: -owg-linear-gradient(to left top, #fd8157, #eb5a82);
-      background-image: -webkit-linear-gradient(to left top, #fd8157, #eb5a82);
-      background-image: -moz-linear-gradient(to left top, #fd8157, #eb5a82);
-      background-image: -o-linear-gradient(to left top, #fd8157, #eb5a82);
-      background-image: linear-gradient(to left top, #fd8157, #eb5a82); }
+      background-image: -owg-linear-gradient(to left top, #2193b0, #6dd5ed);
+      background-image: -webkit-linear-gradient(to left top, #2193b0, #6dd5ed);
+      background-image: -moz-linear-gradient(to left top, #2193b0, #6dd5ed);
+      background-image: -o-linear-gradient(to left top, #2193b0, #6dd5ed);
+      background-image: linear-gradient(to left top, #2193b0, #6dd5ed); }
     .ms-progress .ms-progress-fill.ms-striped {
       background-image: linear-gradient(45deg, rgba(255, 255, 255, 0.15) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.15) 50%, rgba(255, 255, 255, 0.15) 75%, transparent 75%, transparent);
       background-size: 1rem 1rem; }
