--- a/css/scss/_progressbar.scss
+++ b/css/scss/_progressbar.scss
@@ -20,19 +20,23 @@
 		font-weight: bold;
 
 		&.ms-blue{
-			background-color: $color-info;
+			background-color: $color-blue;
 		}
 
 		&.ms-green{
-			background-color: $color-success;
+			background-color: $color-green;
 		}
 
 		&.ms-red{
-			background-color: $color-error;
+			background-color: $color-red;
+		}
+
+		&.ms-yellow{
+			background-color: $color-yellow;
 		}
 
 		&.ms-gradient{
-			@include background-image(linear-gradient(to left top, #fd8157, #eb5a82));
+			@include background-image(linear-gradient(to left top, #2193b0, #6dd5ed));
 		}
 
 		&.ms-striped{
