--- a/css/scss/_box.scss
+++ b/css/scss/_box.scss
@@ -1,14 +1,16 @@
 .ms-box{
 	@include border-radius;
+	border: 1px solid $color-gray-medium;
 	margin: 0.5rem;
-
-	&.ms-boxed{
-		border: 1px solid $color-gray-medium;
-	}
 
 	.ms-header{
 		border-bottom: 1px solid $color-gray-medium;
-		padding: 0.5rem 1rem;
+		padding: 0.8rem 1rem;
+		background-color: $color-gray;
+	}
+
+	&.ms-boxed-none{
+		border: none;
 	}
 
 	.ms-content{
