--- a/css/minstyle.io.css
+++ b/css/minstyle.io.css
@@ -1,3 +1,10 @@
+/* 
+* minstyle.io - A simple CSS Framework ! 
+* Repo : https://github.com/Airmime/minstyle.io
+* Version : v0.2.0
+* Website : https://minstyle.io
+* Author : https://twitter.com/remi_mrn
+*/
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
