--- a/css/scss/minstyle.io.scss
+++ b/css/scss/minstyle.io.scss
@@ -1,3 +1,11 @@
+/* 
+* minstyle.io - A simple CSS Framework ! 
+* Repo : https://github.com/Airmime/minstyle.io
+* Version : v0.2.0
+* Website : https://minstyle.io
+* Author : https://twitter.com/remi_mrn
+*/
+
 $default-border-radius: .3rem;
 
 @import "compass";
