--- a/css/minstyle.io.css
+++ b/css/minstyle.io.css
@@ -23,7 +23,8 @@ time, mark, audio, video {
   border: 0;
   font: inherit;
   font-size: 100%;
-  vertical-align: baseline; }
+  vertical-align: baseline; 
+  font-family: Nunito, BlinkMacSystemFont, -apple-system, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', Arial, sans-serif;}
 
 html {
   line-height: 1; }
