--- a/css/scss/_global.scss
+++ b/css/scss/_global.scss
@@ -8,6 +8,10 @@ html {
 	box-sizing: border-box;
 }
 
+body{
+	font-family: 'Nunito', BlinkMacSystemFont, -apple-system, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
+}
+
 b,strong{
 	font-weight: bold;
 }
