--- a/css/scss/_button.scss
+++ b/css/scss/_button.scss
@@ -7,7 +7,7 @@ input[type='submit']{
 	 background-color: $color-gray-medium;
 	 text-decoration: none;
    text-align: center;
-   font-size: .9rem;
+   font-size: 0.9rem;
    white-space:nowrap;
    color: #000;
    border: 1px solid $color-gray-medium;
@@ -206,7 +206,7 @@ input[type='submit']{
 
   &.ms-small{
     line-height: 1.5rem;
-    padding: 0 .6rem;
+    padding: 0 0.6rem;
     font-size: 80%;
   }
 
