Update zero codestyle

--- a/css/scss/_form.scss
+++ b/css/scss/_form.scss
@@ -37,7 +37,7 @@ select{
 	box-sizing: border-box; 
 	box-shadow: none; 
 	font-size: 1rem;
-	padding: .5rem .7rem;
+	padding: 0.5rem 0.7rem;
 	margin-bottom: 1rem;
 
 	&:focus{
