Update zero codestyle

--- a/css/scss/_progressbar.scss
+++ b/css/scss/_progressbar.scss
@@ -12,7 +12,7 @@
 		height: 1.3rem;
 		background-color: $color-gray-font;
 		white-space: nowrap;
-		font-size: .75rem;
+		font-size: 0.75rem;
 		text-align: center;
 		line-height: 1.3rem;
 		color: #fff;
