--- a/css/scss/_table.scss
+++ b/css/scss/_table.scss
@@ -52,8 +52,8 @@ tr{
 
 	td,
 	th{
-		border-bottom: .1rem solid darken($color-gray, 10%);
-		padding: 1.0rem;
+		border-bottom: 0.1rem solid darken($color-gray, 10%);
+		padding: 1rem;
 		text-align: left;
 	}
 }
